added quesitons on GC